terraform/modules/networking/nacl.tf
resource "aws_network_acl" "main" {
  vpc_id = aws_vpc.main.id

  # Allow all inbound from HTTP
  ingress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 80
    to_port    = 80
  }

  # Allow all outbound
  egress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 65535
  }

  tags = merge({
    Name        = "nacl"
  }, var.common_tags)
}
